feat: add llms.txt reference in footer Resources    section. closes #28
   Add new Resources section to footer with AI Docs link pointing to llms.txt.

   Changes:
   - Modified footer grid from 3 to 4 columns (md:grid-cols-3 → md:grid-cols-4)
   - Added new Resources section between Links and Projeto sections
   - Link to /llms.txt with label AI Docs for better discoverability
   - Maintains consistent styling with existing footer elements
   - Responsive: stacks vertically on mobile, 4 columns on desktop

--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-8 mt-auto" role="contentinfo">
     <div class="container mx-auto px-4">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
         <!-- About -->
         <div>
           <h2 class="text-lg font-semibold mb-3" data-i18n="footer.about">Sobre o Projeto</h2>
@@ -434,6 +434,18 @@
             <li><a href="https://github.com/dwildt/letshelpit" target="_blank" class="text-gray-300 hover:text-white transition">GitHub</a></li>
             <li><a href="https://github.com/dwildt/letshelpit#como-contribuir" target="_blank" class="text-gray-300 hover:text-white transition" data-i18n="footer.contribute">Como Contribuir</a></li>
             <li><a href="https://github.com/dwildt/letshelpit/blob/main/LICENSE" target="_blank" class="text-gray-300 hover:text-white transition" data-i18n="footer.license">Licença Apache 2.0</a></li>
+          </ul>
+        </div>
+
+        <!-- Resources -->
+        <div>
+          <h2 class="text-lg font-semibold mb-3">Resources</h2>
+          <ul class="space-y-2 text-sm">
+            <li>
+              <a href="/llms.txt" target="_blank" class="text-gray-300 hover:text-white transition">
+                AI Docs
+              </a>
+            </li>
           </ul>
         </div>
 
