--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,13 @@
   <!-- Favicon (placeholder) -->
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
+  <!-- Performance: Resource Hints -->
+  <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
+  <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin>
+  <link rel="preload" href="css/styles.css" as="style">
+  <link rel="preload" href="js/app.js" as="script">
+  <link rel="preload" href="js/ui.js" as="script">
+
   <!-- Schema.org Structured Data (JSON-LD) -->
   <script type="application/ld+json">
   {
@@ -569,14 +576,14 @@
 
   <!-- Scripts -->
   <!-- Load in correct order: theme -> config -> i18n -> providers -> app -->
-  <script src="js/theme.js"></script>
-  <script src="js/config.js"></script>
-  <script src="js/i18n.js"></script>
-  <script src="js/providers/DataProvider.js"></script>
-  <script src="js/providers/JSONProvider.js"></script>
-  <script src="js/providers/SQLiteProvider.js"></script>
-  <script src="js/ui.js"></script>
-  <script src="js/app.js"></script>
+  <script defer src="js/theme.js"></script>
+  <script defer src="js/config.js"></script>
+  <script defer src="js/i18n.js"></script>
+  <script defer src="js/providers/DataProvider.js"></script>
+  <script defer src="js/providers/JSONProvider.js"></script>
+  <script defer src="js/providers/SQLiteProvider.js"></script>
+  <script defer src="js/ui.js"></script>
+  <script defer src="js/app.js"></script>
 
   <!-- Initialize App -->
   <script>
