perf: css performance from lighthouse report - now tailwind css is generated from ci build and not downloaded from cdn

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,7 @@
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
   <!-- Performance: Resource Hints -->
-  <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
-  <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin>
-  <link rel="preload" href="css/styles.css" as="style">
+  <link rel="preload" href="css/output.css" as="style">
   <link rel="preload" href="js/app.js" as="script">
   <link rel="preload" href="js/ui.js" as="script">
 
@@ -236,25 +234,8 @@
   }
   </script>
 
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="css/styles.css">
-
-  <!-- Tailwind Config -->
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: '#3B82F6',
-            secondary: '#10B981',
-          }
-        }
-      }
-    }
-  </script>
+  <!-- Tailwind CSS + Custom Styles (generated) -->
+  <link rel="stylesheet" href="css/output.css">
 </head>
 <body class="min-h-screen flex flex-col">
 
